<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#F5ECFF">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="70sp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:layout_above="@+id/result"
        android:id="@+id/calc"
        android:layout_margin="10dp"/>


<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/_0"
    android:textSize="48sp"
    android:textAlignment="textEnd"
    android:textColor="#393E40"
    android:layout_above="@+id/buttons_layout"
    android:id="@+id/result"
    android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/buttons_layout"
        android:layout_alignParentBottom="true"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
               android:id="@+id/button_AC"
                android:layout_width="90dp"
                android:layout_height="80dp"
                app:cornerRadius="32dp"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/ac"
                android:textSize="26sp"
                android:backgroundTint="#BAE6B3"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_openbrac"
                android:layout_width="90dp"
                android:layout_height="80dp"
                app:cornerRadius="32dp"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/openbrac"
                android:textSize="26sp"
                android:backgroundTint="#A6CAF2"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_closebrac"
                android:layout_width="90dp"
                android:layout_height="80dp"
                app:cornerRadius="32dp"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/closebrac"
                android:textSize="26sp"
                android:backgroundTint="#A6CAF2"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_divide"
                android:layout_width="90dp"
                android:layout_height="80dp"
                app:cornerRadius="32dp"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/divide"
                android:textSize="26sp"
                android:backgroundTint="#A6CAF2"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                android:layout_width="90dp"
                android:layout_height="80dp"
                app:cornerRadius="32dp"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_7"
                android:textSize="26sp"
                android:backgroundTint="#F5ECFF"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                android:layout_width="90dp"
                android:layout_height="80dp"
                app:cornerRadius="32dp"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_8"
                android:textSize="26sp"
                android:backgroundTint="#F5ECFF"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                android:layout_width="90dp"
                android:layout_height="80dp"
                app:cornerRadius="32dp"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_9"
                android:textSize="26sp"
                android:backgroundTint="#F5ECFF"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_mult"
                android:layout_width="90dp"
                android:layout_height="80dp"
                app:cornerRadius="32dp"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/mult"
                android:textSize="26sp"
                android:backgroundTint="#A6CAF2"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                android:layout_width="90dp"
                android:layout_height="80dp"
                app:cornerRadius="32dp"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_4"
                android:textSize="26sp"
                android:backgroundTint="#F5ECFF"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                android:layout_width="90dp"
                android:layout_height="80dp"
                app:cornerRadius="32dp"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_5"
                android:textSize="26sp"
                android:backgroundTint="#F5ECFF"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                android:layout_width="90dp"
                android:layout_height="80dp"
                app:cornerRadius="32dp"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_6"
                android:textSize="26sp"
                android:backgroundTint="#F5ECFF"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                android:layout_width="90dp"
                android:layout_height="80dp"
                app:cornerRadius="32dp"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/minus"
                android:textSize="26sp"
                android:backgroundTint="#A6CAF2"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                android:layout_width="90dp"
                android:layout_height="80dp"
                app:cornerRadius="32dp"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_1"
                android:textSize="26sp"
                android:backgroundTint="#F5ECFF"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                android:layout_width="90dp"
                android:layout_height="80dp"
                app:cornerRadius="32dp"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_2"
                android:textSize="26sp"
                android:backgroundTint="#F5ECFF"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                android:layout_width="90dp"
                android:layout_height="80dp"
                app:cornerRadius="32dp"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_3"
                android:textSize="26sp"
                android:backgroundTint="#F5ECFF"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                android:layout_width="90dp"
                android:layout_height="80dp"
                app:cornerRadius="32dp"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/plus"
                android:textSize="26sp"
                android:backgroundTint="#A6CAF2"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_zero"
                android:layout_width="90dp"
                android:layout_height="80dp"
                app:cornerRadius="32dp"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_0"
                android:textSize="26sp"
                android:backgroundTint="#F5ECFF"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_dot"
                android:layout_width="90dp"
                android:layout_height="80dp"
                app:cornerRadius="32dp"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/dot"
                android:textSize="26sp"
                android:backgroundTint="#F5ECFF"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_clear"
                android:layout_width="90dp"
                android:layout_height="80dp"
                app:cornerRadius="32dp"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/c"
                android:textSize="26sp"
                android:backgroundTint="#F5ECFF"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equal"
                android:layout_width="90dp"
                android:layout_height="80dp"
                app:cornerRadius="32dp"
                android:layout_margin="5dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/equal"
                android:textSize="26sp"
                android:backgroundTint="#DECEFF"
                />
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>